@@ -10,6 +10,7 @@
     * 4096 avaya_chassis_card, avaya_chassis_ps, avaya_chassis_temp: New checks for Avaya devices...
     * 4094 apc_rackpdu_power: now detects all phases or banks connected to this pdu
             NOTE: Please refer to the migration notes!
+    * 3993 Some minor performance improvements during config generation...
     * 3987 FIX: Check_MK Agent Access: Windows agent reported incorrect only from value
     * 3952 FIX: diskstat: fixed bug if multipath devices having an alias...
     * 3939 FIX: f5_bigip_conns: readded performance data and graphs...
